# ScoreWarriorTest

./: CMakeLists.txt  README.md  exmple2.txt  exmple3.txt  main.cpp
commands/: acrher_kills_warriors.txt  acrher_stand_on_warrior.txt  exmple1.txt  exmple2.txt  from_task.txt  three_warriors_arrive.txt  two_archers_kill_each_other.txt
inc/: ArrivedAction.h  CommandsFeeder.h  Engine.h  Parser.h  Types.h  Unit.h  Utils.h
src/: Engine.cpp  Parser.cpp  Unit.cpp  Utils.cpp
